# AuboRepo

AUBO/: Logger Package ReadMe
AUBO/Code Backup/: control_Nico_20190312(1).cpp  control_Nico_20190312.cpp
AUBO/Code Backup/aubo_nico/: CMakeLists.txt  package.xml  readme.txt
AUBO/Code Backup/aubo_nico/include/: aubo_robot.h
AUBO/Code Backup/aubo_nico/launch/: graphs.launch  graphs_joint_control.launch  openloop_control.launch
AUBO/Code Backup/aubo_nico/src/: aubo_robot.cpp  filter.cpp  openloop_control.cpp  trajectory_publisher.cpp  velocity_estimator.cpp  xml_on_the_fly.cpp
AUBO/trajectory package/: CMakeLists.txt  package.xml
Outros[/: Cronograma Doutorado.xlsx  Didatica.pptx
Outros[/libpololu-avr/: LICENSE.txt  Makefile  README.txt  install.bat  installer.nsi
Outros[/libpololu-avr/avr_studio_5/: extension.vsix
Outros[/libpololu-avr/avr_studio_5/stk500_xml/: ATmega1284P_stk500.xml  ATmega328P_stk500.xml  ATmega644P_stk500.xml
Outros[/libpololu-avr/devices/: template.mk
Outros[/libpololu-avr/devices/atmega644p/: Makefile
Outros[/libpololu-avr/pololu/: Pololu3pi.h  encoders.h  orangutan  orangutan.h  qtr.h
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/aubo_description/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_driver/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_i3_moveit_config/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_i5_moveit_config/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_i5l_moveit_config/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_i7_moveit_config/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/aubo_msgs/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/jog_arm/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/.private/jog_msgs/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/logger/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/moveit_tutorials/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/netft_utils/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/panda_moveit_config/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/slider_publisher/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/trajectory/: .catkin  .rosinstall  setup.sh
catkin_ws/logs/aubo_controller/: build.cmake.000.log.stderr
catkin_ws/logs/aubo_driver/: build.check.127.log.stderr  build.check.147.log.stderr  build.check.149.log.stderr  build.check.167.log.stderr  build.check.215.log.stderr  build.check.345.log.stderr  build.check.498.log.stderr  build.check.499.log.stderr  build.check.621.log.stderr  build.check.776.log.stderr  build.check.877.log.stderr  build.make.1045.log.stderr  build.make.1046.log.stderr  build.make.1058.log.stderr  build.make.1059.log.stderr  build.make.1060.log.stderr  build.make.1061.log.stderr  build.make.1062.log.stderr  build.make.1064.log.stderr  build.make.1078.log.stderr  build.make.1091.log.stderr  build.make.1116.log.stderr  build.make.1117.log.stderr  build.make.1118.log.stderr  build.make.1119.log.stderr  build.make.1120.log.stderr  build.make.1121.log.stderr  build.make.1141.log.stderr  build.make.1173.log.stderr  build.make.1174.log.stderr  build.make.1220.log.stderr  build.make.1222.log.stderr  build.make.1223.log.stderr  build.make.1224.log.stderr  build.make.1225.log.stderr  build.make.1229.log.stderr  build.make.1240.log.stderr  build.make.1246.log.stderr  build.make.1247.log.stderr  build.make.1248.log.stderr  (+79 more)
catkin_ws/logs/aubo_nico/: build.make.006.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.016.log.stderr
catkin_ws/logs/jog_arm/: build.cmake.000.log.stderr
catkin_ws/logs/moveit_tutorials/: build.make.014.log.stderr
catkin_ws/logs/trajectory/: build.check.192.log.stderr  build.check.193.log.stderr  build.check.194.log.stderr  build.check.195.log.stderr  build.check.197.log.stderr  build.check.198.log.stderr  build.check.199.log.stderr  build.check.202.log.stderr  build.check.214.log.stderr  build.check.215.log.stderr  build.check.217.log.stderr  build.make.018.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.036.log.stderr  build.make.038.log.stderr  build.make.042.log.stderr  build.make.046.log.stderr  build.make.049.log.stderr  build.make.052.log.stderr  build.make.054.log.stderr  build.make.077.log.stderr  build.make.104.log.stderr  build.make.139.log.stderr  build.make.150.log.stderr  build.make.151.log.stderr  build.make.152.log.stderr  build.make.153.log.stderr  build.make.166.log.stderr  build.make.173.log.stderr  build.make.180.log.stderr  build.make.183.log.stderr  build.make.186.log.stderr  build.make.188.log.stderr  build.make.194.log.stderr  build.make.196.log.stderr  build.make.202.log.stderr  (+7 more)
catkin_ws/src/trajectory/: CMakeLists.txt
catkin_ws/src/trajectory/launch/: joint_control.launch
catkin_ws/src/trajectory/src/: grid_trajectory.cpp  initial_conditions.cpp  joint_control.cpp  listener.cpp
(+766 files in other folders)
